@@ -4,6 +4,7 @@ NEW
     - Added Reward Tooltip to WorldQuests
     - Added threat text on target
     - Added FPS to Minimap
+    - Added durability icon to character stats
 
 FIXES
     - Fixed bag close button not working at bank, vendor or mailbox
